# softarch

./: LICENSE  README.md
.github/workflows/: astro.yml
assignments/lab02/: README.md  docker-compose.yml
assignments/lab02/business/: Dockerfile  README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
assignments/lab02/business/src/: controllers.ts  grpc_client.ts  main.ts
assignments/lab02/data/: Dockerfile  README.md  carreras.sql  tables.sql
assignments/lab02/data/scripts/: carreras_pregrado.json  data_generation.py  fisi_2022.json  provincias.txt  random_names.txt
assignments/lab02/presentation/: Dockerfile  README.md  nginx.conf
assignments/lab02/services/: .env  Cargo.toml  Dockerfile  README.md  build.rs
assignments/lab02/services/.sqlx/: query-003e81b8d3717f2ffd537f681e4fdb8e26a46ca0604ffbb6145e6edbee82557b.json  query-847d12870a921071587ecb433f138fb70ce0930e8686b2697f97c46646f86578.json  query-cced02f25fe03b970a81dce4301442aa14acbd9f9d8464c7b027f16d2081822a.json  query-e21a2a041fb56bde592c444bea0c11e7b42cceb411eef99b32596d45c062c7e4.json
assignments/lab02/services/proto/: unmsm_service.proto
assignments/lab02/services/src/: db.rs  main.rs
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
site/src/: types.ts  utils.ts
site/src/assignments/lab02/: CountTable.tsx  Dropdown.tsx  (+3 more)
site/src/components/: AssignmentItem.astro  AvailableAtGithub.astro  Divider.astro  Header.astro  Link.astro  SVGRender.tsx
site/src/layouts/: Layout.astro  ProjectLayout.astro
site/src/pages/: index.astro
(+2 files in other folders)
